--- a/dev/Assets/Css/style.css
+++ b/dev/Assets/Css/style.css
@@ -1022,6 +1022,9 @@ pre {
 .z-50 {
   z-index: 50;
 }
+.mt-auto {
+  margin-top: auto;
+}
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -1060,6 +1063,9 @@ pre {
 }
 .h-6 {
   height: 1.5rem;
+}
+.min-h-screen {
+  min-height: 100vh;
 }
 .w-5 {
   width: 1.25rem;
@@ -1126,6 +1132,9 @@ pre {
 }
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.flex-col {
+  flex-direction: column;
 }
 .items-start {
   align-items: flex-start;
@@ -1286,10 +1295,6 @@ pre {
 .leading-6 {
   line-height: 1.5rem;
 }
-.text-green-900 {
-  --tw-text-opacity: 1;
-  color: rgb(1 71 55 / var(--tw-text-opacity));
-}
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -1301,6 +1306,10 @@ pre {
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
+}
+.text-green-900 {
+  --tw-text-opacity: 1;
+  color: rgb(1 71 55 / var(--tw-text-opacity));
 }
 .text-gray-600 {
   --tw-text-opacity: 1;
